added get_email graph
