# swagger.yaml
@@ -301,7 +301,53 @@ paths:
           description: "Server side error - description in response."
           schema:
             $ref: "#/definitions/StatusResponse"
-  
+  /get_emails_graph:
+    get:
+      tags:
+      - "emails using graph"
+      summary: "List the emails in a given mailbox."
+      consumes:
+        - application/json
+      parameters:
+        - in: query
+          name: "mailbox"
+          type: string
+        - in: query
+          name: "items_per_page"
+          type: integer
+        - in: query
+          name: "page_number"
+          type: integer
+        - in: query
+          name: "emailsource"
+          type: string
+          required: True
+        - in: header
+          name: "Authorization"
+          type: string
+          format: "jwt"
+          required: true
+        - in: header
+          name: "X-Access-Token"
+          type: string
+          required: true
+      responses:
+        200:
+          description: "Emails successfully retrieved."
+          schema:
+            $ref: "#/definitions/GetEmailResponse"
+        400:
+          description: "Invalid request - description in response."
+          schema:
+            $ref: "#/definitions/StatusResponse"
+        401:
+          description: "Unauthorized - description in response."
+          schema:
+            $ref: "#/definitions/StatusResponse"
+        500:
+          description: "Server side error - description in response."
+          schema:
+            $ref: "#/definitions/StatusResponse"  
   /upload_email:
     post:
       tags:
@@ -1236,7 +1282,7 @@ paths:
     get:
       tags:
       - "gamification"
-      summary: "Get office leaderboard the application."
+      summary: "Get leaderboard for the office."
       consumes:
         - application/json
       parameters:
